--- a/api/informations/models/informations.settings.json
+++ b/api/informations/models/informations.settings.json
@@ -15,6 +15,9 @@
     "about_me": {
       "type": "text",
       "required": true
+    },
+    "about_me_img_url": {
+      "type": "string"
     }
   }
 }
